compiles with meteor 1.2.1 continuing testing

--- a/lib/styl/components/_buttons.import.styl
+++ b/lib/styl/components/_buttons.import.styl
@@ -39,7 +39,7 @@
   transition: .2s ease-out
   cursor: pointer
   &:hover
-    background-color: lighten($button-color, 5%)
+    background-color:  unquote('lighten($button-color, 5%)')
     @extend .z-depth-1-half
 // Floating button
 .btn-floating
