--- a/lib/styl/components/_form.import.styl
+++ b/lib/styl/components/_form.import.styl
@@ -566,7 +566,7 @@ select:disabled
     font-size: 20px
     cursor: pointer
     opacity: 0
-    filter: alpha(opacity = 0)
+    filter: unquote('alpha(opacity=0)')
 /***************
       Range
 ***************/
