--- a/lib/styl/components/_waves.import.styl
+++ b/lib/styl/components/_waves.import.styl
@@ -72,7 +72,7 @@
     text-transform: inherit
     background: none
 .waves-notransition
-  transition: none {"!important"}
+  transition: none !important
 .waves-circle
   transform: translateZ(0)
   -webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%)
