--- a/lib/styl/components/_preloader.import.styl
+++ b/lib/styl/components/_preloader.import.styl
@@ -38,30 +38,38 @@
     /* duration: 360 * ARCTIME / (ARCSTARTROT + (360-ARCSIZE)) */
     -webkit-animation: container-rotate 1568ms linear infinite
     animation: container-rotate 1568ms linear infinite
-@-webkit-keyframes
+
+@-webkit-keyframes container-rotate
   to
     -webkit-transform: rotate(360deg)
-@keyframes
+
+@keyframes container-rotate
   to
     transform: rotate(360deg)
+
 .spinner-layer
   position: absolute
   width: 100%
   height: 100%
   opacity: 0
   border-color: $spinner-default-color
+
 .spinner-blue,
 .spinner-blue-only
   border-color: #4285f4
+
 .spinner-red,
 .spinner-red-only
   border-color: #db4437
+
 .spinner-yellow,
 .spinner-yellow-only
   border-color: #f4b400
+
 .spinner-green,
 .spinner-green-only
   border-color: #0f9d58
+
 /**
  * IMPORTANT NOTE ABOUT CSS ANIMATION PROPERTIES (keanulee):
  *
@@ -79,18 +87,22 @@
   /* durations: 4 * ARCTIME */
   -webkit-animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both, blue-fade-in-out 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
   animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both, blue-fade-in-out 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
+
 .active .spinner-layer.spinner-red
   /* durations: 4 * ARCTIME */
   -webkit-animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both, red-fade-in-out 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
   animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both, red-fade-in-out 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
+
 .active .spinner-layer.spinner-yellow
   /* durations: 4 * ARCTIME */
   -webkit-animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both, yellow-fade-in-out 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
   animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both, yellow-fade-in-out 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
+
 .active .spinner-layer.spinner-green
   /* durations: 4 * ARCTIME */
   -webkit-animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both, green-fade-in-out 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
   animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both, green-fade-in-out 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
+
 .active .spinner-layer,
 .active .spinner-layer.spinner-blue-only,
 .active .spinner-layer.spinner-red-only,
@@ -100,148 +112,209 @@
   opacity: 1
   -webkit-animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
   animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
-@-webkit-keyframes
-  12.5$
--webkit-transform: rotate(135deg)
-/* 0.5 * ARCSIZE */
-25$
--webkit-transform: rotate(270deg)
-/* 1   * ARCSIZE */
-37.5$
--webkit-transform: rotate(405deg)
-/* 1.5 * ARCSIZE */
-50$
--webkit-transform: rotate(540deg)
-/* 2   * ARCSIZE */
-62.5$
--webkit-transform: rotate(675deg)
-/* 2.5 * ARCSIZE */
-75$
--webkit-transform: rotate(810deg)
-/* 3   * ARCSIZE */
-87.5$
--webkit-transform: rotate(945deg)
-/* 3.5 * ARCSIZE */
-to
--webkit-transform: rotate(1080deg)
+
+@-webkit-keyframes fill-unfill-rotate
+  12.5%
+    -webkit-transform: rotate(135deg);
+
+  /* 0.5 * ARCSIZE */
+  25%
+    -webkit-transform: rotate(270deg);
+
+  /* 1   * ARCSIZE */
+  37.5%
+    -webkit-transform: rotate(405deg);
+
+  /* 1.5 * ARCSIZE */
+  50%
+    -webkit-transform: rotate(540deg);
+
+  /* 2   * ARCSIZE */
+  62.5%
+    -webkit-transform: rotate(675deg);
+
+  /* 2.5 * ARCSIZE */
+  75%
+    -webkit-transform: rotate(810deg);
+
+  /* 3   * ARCSIZE */
+  87.5%
+    -webkit-transform: rotate(945deg);
+
+  /* 3.5 * ARCSIZE */
+  to
+    -webkit-transform: rotate(1080deg);
+
 /* 4   * ARCSIZE */
-@keyframes
-  12.5$
-transform: rotate(135deg)
-/* 0.5 * ARCSIZE */
-25$
-transform: rotate(270deg)
-/* 1   * ARCSIZE */
-37.5$
-transform: rotate(405deg)
-/* 1.5 * ARCSIZE */
-50$
-transform: rotate(540deg)
-/* 2   * ARCSIZE */
-62.5$
-transform: rotate(675deg)
-/* 2.5 * ARCSIZE */
-75$
-transform: rotate(810deg)
-/* 3   * ARCSIZE */
-87.5$
-transform: rotate(945deg)
-/* 3.5 * ARCSIZE */
-to
-transform: rotate(1080deg)
+
+@keyframes fill-unfill-rotate
+  12.5%
+    transform: rotate(135deg);
+
+  /* 0.5 * ARCSIZE */
+  25%
+    transform: rotate(270deg);
+
+  /* 1   * ARCSIZE */
+  37.5%
+    transform: rotate(405deg);
+
+  /* 1.5 * ARCSIZE */
+  50%
+    transform: rotate(540deg);
+
+  /* 2   * ARCSIZE */
+  62.5%
+    transform: rotate(675deg);
+
+  /* 2.5 * ARCSIZE */
+  75%
+    transform: rotate(810deg);
+
+  /* 3   * ARCSIZE */
+  87.5%
+    transform: rotate(945deg);
+
+  /* 3.5 * ARCSIZE */
+  to
+    transform: rotate(1080deg);
+
 /* 4   * ARCSIZE */
-@-webkit-keyframes
+
+@-webkit-keyframes blue-fade-in-out
   from
-    opacity: 1
-  25$
-opacity: 1
-26$
-opacity: 0
-89$
-opacity: 0
-90$
-opacity: 1
-100$
-opacity: 1
-@keyframes
+    opacity: 1;
+
+  25%
+    opacity: 1;
+
+  26%
+    opacity: 0;
+
+  89%
+    opacity: 0;
+
+  90%
+    opacity: 1;
+
+  100%
+    opacity: 1;
+
+@keyframes blue-fade-in-out
   from
-    opacity: 1
-  25$
-opacity: 1
-26$
-opacity: 0
-89$
-opacity: 0
-90$
-opacity: 1
-100$
-opacity: 1
-@-webkit-keyframes
+    opacity: 1;
+
+  25%
+    opacity: 1;
+
+  26%
+    opacity: 0;
+
+  89%
+    opacity: 0;
+
+  90%
+    opacity: 1;
+
+  100%
+    opacity: 1;
+
+@-webkit-keyframes red-fade-in-out
   from
-    opacity: 0
-  15$
-opacity: 0
-25$
-opacity: 1
-50$
-opacity: 1
-51$
-opacity: 0
-@keyframes
+    opacity: 0;
+
+  15%
+    opacity: 0;
+
+  25%
+    opacity: 1;
+
+  50%
+    opacity: 1;
+
+  51%
+    opacity: 0;
+
+@keyframes red-fade-in-out
   from
-    opacity: 0
-  15$
-opacity: 0
-25$
-opacity: 1
-50$
-opacity: 1
-51$
-opacity: 0
-@-webkit-keyframes
+    opacity: 0;
+
+  15%
+    opacity: 0;
+
+  25%
+    opacity: 1;
+
+  50%
+    opacity: 1;
+
+  51%
+    opacity: 0;
+
+@-webkit-keyframes yellow-fade-in-out
   from
-    opacity: 0
-  40$
-opacity: 0
-50$
-opacity: 1
-75$
-opacity: 1
-76$
-opacity: 0
-@keyframes
+    opacity: 0;
+
+  40%
+    opacity: 0;
+
+  50%
+    opacity: 1;
+
+  75%
+    opacity: 1;
+
+  76%
+    opacity: 0;
+
+@keyframes yellow-fade-in-out
   from
-    opacity: 0
-  40$
-opacity: 0
-50$
-opacity: 1
-75$
-opacity: 1
-76$
-opacity: 0
-@-webkit-keyframes
+    opacity: 0;
+
+  40%
+    opacity: 0;
+
+  50%
+    opacity: 1;
+
+  75%
+    opacity: 1;
+
+  76%
+    opacity: 0;
+
+@-webkit-keyframes green-fade-in-out
   from
-    opacity: 0
-  65$
-opacity: 0
-75$
-opacity: 1
-90$
-opacity: 1
-100$
-opacity: 0
-@keyframes
+    opacity: 0;
+
+  65%
+    opacity: 0;
+
+  75%
+    opacity: 1;
+
+  90%
+    opacity: 1;
+
+  100%
+    opacity: 0;
+
+@keyframes green-fade-in-out
   from
-    opacity: 0
-  65$
-opacity: 0
-75$
-opacity: 1
-90$
-opacity: 1
-100$
-opacity: 0
+    opacity: 0;
+
+  65%
+    opacity: 0;
+
+  75%
+    opacity: 1;
+
+  90%
+    opacity: 1;
+
+  100%
+    opacity: 0;
+
 /**
  * Patch the gap that appear between the two adjacent div.circle-clipper while the
  * spinner is rotating (appears on Chrome 38, Safari 7.1, and IE 11).
@@ -254,9 +327,11 @@ opacity: 0
   height: 100%
   overflow: hidden
   border-color: inherit
+
 .gap-patch .circle
   width: 1000%
   left: -450%
+
 .circle-clipper
   display: inline-block
   position: relative
@@ -289,53 +364,73 @@ opacity: 0
     border-left-color: transparent !important
     -webkit-transform: rotate(-129deg)
     transform: rotate(-129deg)
+
 .active .circle-clipper.left .circle
   /* duration: ARCTIME */
   -webkit-animation: left-spin 1333ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
   animation: left-spin 1333ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
+
 .active .circle-clipper.right .circle
   /* duration: ARCTIME */
   -webkit-animation: right-spin 1333ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
   animation: right-spin 1333ms cubic-bezier(0.4, 0, 0.2, 1) infinite both
-@-webkit-keyframes
+
+@-webkit-keyframes left-spin
   from
-    -webkit-transform: rotate(130deg)
-  50$
--webkit-transform: rotate(-5deg)
-to
--webkit-transform: rotate(130deg)
-@keyframes
+    -webkit-transform: rotate(130deg);
+
+  50%
+    -webkit-transform: rotate(-5deg);
+
+  to
+    -webkit-transform: rotate(130deg);
+
+@keyframes left-spin
   from
-    transform: rotate(130deg)
-  50$
-transform: rotate(-5deg)
-to
-transform: rotate(130deg)
-@-webkit-keyframes
+    transform: rotate(130deg);
+
+  50%
+    transform: rotate(-5deg);
+
+  to
+    transform: rotate(130deg);
+
+@-webkit-keyframes right-spin
   from
-    -webkit-transform: rotate(-130deg)
-  50$
--webkit-transform: rotate(5deg)
-to
--webkit-transform: rotate(-130deg)
-@keyframes
+    -webkit-transform: rotate(-130deg);
+
+  50%
+    -webkit-transform: rotate(5deg);
+
+  to
+    -webkit-transform: rotate(-130deg);
+
+@keyframes right-spin
   from
-    transform: rotate(-130deg)
-  50$
-transform: rotate(5deg)
-to
-transform: rotate(-130deg)
+    transform: rotate(-130deg);
+
+  50%
+    transform: rotate(5deg);
+
+  to
+    transform: rotate(-130deg);
+
 #spinnerContainer.cooldown
   /* duration: SHRINK_TIME */
-  -webkit-animation: container-rotate 1568ms linear infinite, fade-out 400ms cubic-bezier(0.4, 0, 0.2, 1)
-  animation: container-rotate 1568ms linear infinite, fade-out 400ms cubic-bezier(0.4, 0, 0.2, 1)
-@-webkit-keyframes
+  -webkit-animation: container-rotate 1568ms linear infinite, fade-out 400ms cubic-bezier(0.4, 0.0, 0.2, 1);
+  animation: container-rotate 1568ms linear infinite, fade-out 400ms cubic-bezier(0.4, 0.0, 0.2, 1);
+
+@-webkit-keyframes fade-out
   from
-    opacity: 1
+    opacity: 1;
+
   to
-    opacity: 0
-@keyframes
+    opacity: 0;
+
+@keyframes fade-out
   from
-    opacity: 1
+    opacity: 1;
+
   to
-    opacity: 0
+    opacity: 0;
+  
