--- a/lib/styl/components/_table_of_contents.import.styl
+++ b/lib/styl/components/_table_of_contents.import.styl
@@ -18,8 +18,8 @@
     &:hover
       color: lighten(#757575, 20%)
       padding-left: 19px
-      border-left: 1px solid lighten(color("materialize-red", "base"), 10%)
+      border-left: 1px solid lighten($materialize-red["base"], 10%)
     &.active
       font-weight: 500
       padding-left: 18px
-      border-left: 2px solid lighten(color("materialize-red", "base"), 10%)
+      border-left: 2px solid lighten($materialize-red["base"], 10%)
