--- a/lib/styl/components/date_picker/_default.import.styl
+++ b/lib/styl/components/date_picker/_default.import.styl
@@ -68,7 +68,7 @@
   width: 300px
   max-height: 350px
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"
-  filter: alpha(opacity = 0)
+  filter  unquote('alpha(opacity=0)')
   -moz-opacity: 0
   opacity: 0
   -webkit-transition: all 0.15s ease-out
@@ -143,7 +143,7 @@
 .picker--opened .picker__frame
   top: 0
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"
-  filter: alpha(opacity = 100)
+  filter: unquote('alpha(opacity=100)')
   -moz-opacity: 1
   opacity: 1
 @media (min-height: 35.875em)
@@ -157,7 +157,7 @@
    CUSTOM MATERIALIZE STYLES
    ========================================================================== */
 .picker__input.picker__input--active
-  border-color: color("blue", "lighten-5")
+  border-color: $blue["lighten-5"]
 .picker__frame
   margin: 0 auto
   max-width: 325px
