--- a/lib/styl/materialize.styl
+++ b/lib/styl/materialize.styl
@@ -1,35 +1,35 @@
 // Mixins
 // @import "components/prefixer";
-@import 'components/mixins'
-@import 'components/color'
+@import 'components/_mixins.import'
+@import 'components/_color.import'
 // Variables;
-@import 'components/variables'
+@import 'components/_variables.import'
 // Reset
-@import 'components/normalize'
+@import 'components/_normalize.import'
 // components
-@import 'components/global'
-@import 'components/icons-material-design'
-@import 'components/grid'
-@import 'components/navbar'
-@import 'components/roboto'
-@import 'components/typography'
-@import 'components/cards'
-@import 'components/toast'
-@import 'components/tabs'
-@import 'components/tooltip'
-@import 'components/buttons'
-@import 'components/dropdown'
-@import 'components/waves'
-@import 'components/modal'
-@import 'components/collapsible'
-@import 'components/chips'
-@import 'components/materialbox'
-@import 'components/form'
-@import 'components/table_of_contents'
-@import 'components/sideNav'
-@import 'components/preloader'
-@import 'components/slider'
-@import 'components/carousel'
-@import 'components/date_picker/default.scss'
-@import 'components/date_picker/default.date.scss'
-@import 'components/date_picker/default.time.scss'
+@import 'components/_global.import'
+@import 'components/_icons-material-design.import'
+@import 'components/_grid.import'
+@import 'components/_navbar.import'
+@import 'components/_roboto.import'
+@import 'components/_typography.import'
+@import 'components/_cards.import'
+@import 'components/_toast.import'
+@import 'components/_tabs.import'
+@import 'components/_tooltip.import'
+@import 'components/_buttons.import'
+@import 'components/_dropdown.import'
+@import 'components/_waves.import'
+@import 'components/_modal.import'
+@import 'components/_collapsible.import'
+@import 'components/_chips.import'
+@import 'components/_materialbox.import'
+@import 'components/_form.import'
+@import 'components/_table_of_contents.import'
+@import 'components/_sideNav.import'
+@import 'components/_preloader.import'
+@import 'components/_slider.import'
+@import 'components/_carousel.import'
+@import 'components/date_picker/_default.import'
+@import 'components/date_picker/_default.date.import'
+@import 'components/date_picker/_default.time.import'
