--- a/lib/styl/components/_icons-material-design.import.styl
+++ b/lib/styl/components/_icons-material-design.import.styl
@@ -2,7 +2,7 @@ $font-mdi = "Material-Design-Icons"
 $mdi-prefix = "mdi-"
 @font-face
   font-family "Material-Design-Icons"
-  src url("../font/material-design-icons/Material-Design-Icons.eot?#iefix") format("embedded-opentype"), url("../font/material-design-icons/Material-Design-Icons.woff2") format("woff2"), url("../font/material-design-icons/Material-Design-Icons.woff") format("woff"), url("../font/material-design-icons/Material-Design-Icons.ttf") format("truetype"), url("../font/material-design-icons/Material-Design-Icons.svg#Material-Design-Icons") format("svg")
+  src url("../../font/material-design-icons/Material-Design-Icons.eot?#iefix") format("embedded-opentype"), url("../../font/material-design-icons/Material-Design-Icons.woff2") format("woff2"), url("../../font/material-design-icons/Material-Design-Icons.woff") format("woff"), url("../../font/material-design-icons/Material-Design-Icons.ttf") format("truetype"), url("../../font/material-design-icons/Material-Design-Icons.svg#Material-Design-Icons") format("svg")
   font-weight normal
   font-style normal
 
