--- a/lib/styl/components/_modal.import.styl
+++ b/lib/styl/components/_modal.import.styl
@@ -12,7 +12,7 @@
   overflow-y: auto
   border-radius: 2px
   will-change: top, opacity
-  @media only screen and (max-width: (interpolation nil $medium-screen nil))
+  @media $medium-and-down
     width: 80%
   h1,h2,h3,h4
     margin-top: 0
