--- a/lib/styl/components/_sideNav.import.styl
+++ b/lib/styl/components/_sideNav.import.styl
@@ -56,7 +56,7 @@
     right: 0
     left: auto
 // Fixed sideNav hide on smaller
-@media only screen and (max-width: (interpolation nil $medium-screen nil))
+@media $medium-and-down
   .side-nav.fixed
     left: -105%
     &.right-aligned
