--- a/lib/styl/components/_toast.import.styl
+++ b/lib/styl/components/_toast.import.styl
@@ -2,14 +2,14 @@
   display: block
   position: fixed
   z-index: 10000
-  @media only screen and (max-width: (interpolation nil $small-screen nil))
+  @media $small-and-down
     min-width: 100%
     bottom: 0%
-  @media only screen and (min-width: (interpolation nil $small-screen-up nil)) and (max-width: (interpolation nil $medium-screen nil))
+  @media $medium-only
     left: 5%
     bottom: 7%
     max-width: 90%
-  @media only screen and (min-width: (interpolation nil $medium-screen-up nil))
+  @media $large-and-up
     top: 10%
     right: 7%
     max-width: 86%
@@ -39,10 +39,10 @@
     margin-left: 3rem
   &.rounded
     border-radius: 24px
-  @media only screen and (max-width: (interpolation nil $small-screen nil))
+  @media $small-and-down
     width: 100%
     border-radius: 0
-  @media only screen and (min-width: (interpolation nil $small-screen-up nil)) and (max-width: (interpolation nil $medium-screen nil))
+  @media $medium-only
     float: left
-  @media only screen and (min-width: (interpolation nil $medium-screen-up nil))
+  @media $large-and-up
     float: right
