--- a/lib/styl/components/_variables.import.styl
+++ b/lib/styl/components/_variables.import.styl
@@ -43,8 +43,8 @@ $dropdown-hover-bg-color = #eeeeee
 $dropdown-color = $secondary-color
 $dropdown-item-height = 50px
 /*** Fonts ***/
-$roboto-font-path = "../font/roboto/"
-$icons-font-path = "../font/material-design-icons/"
+$roboto-font-path = "../../../gantrim_materialize-stylus/lib/font/roboto/"
+$icons-font-path = "../../../gantrim_materialize-stylus/lib/font/material-design-icons/"
 /*** Forms ***/
 // Text Inputs + Textarea
 $input-border-color = $grey["base"]
