--- a/lib/styl/materialize.styl
+++ b/lib/styl/materialize.styl
@@ -6,34 +6,34 @@
 @import "components/variables.import";
 
 // Reset
-//@import "components/normalize.import";
+@import "components/normalize.import";
 
 // components
-//@import "components/global.import";
-//@import "components/badges.import";
-//@import "components/icons-material-design.import";
-//@import "components/grid.import";
-//@import "components/navbar.import";
-//@import "components/typography.import";
-//@import "components/transitions.import";
-//@import "components/cards.import";
-//@import "components/toast.import";
-//@import "components/tabs.import";
-//@import "components/tooltip.import";
-//@import "components/buttons.import";
-//@import "components/dropdown.import";
-//@import "components/waves.import";
-//@import "components/modal.import";
-//@import "components/collapsible.import";
-//@import "components/chips.import";
-//@import "components/materialbox.import";
-//@import "components/forms/forms.import";
-//@import "components/table_of_contents.import";
-//@import "components/sidenav.import";
-//@import "components/preloader.import";
-//@import "components/slider.import";
-//@import "components/carousel.import";
-//@import "components/tapTarget.import";
-//@import "components/pulse.import";
-//@import "components/datepicker.import";
-//@import "components/timepicker.import";
+@import "components/global.import";
+@import "components/badges.import";
+@import "components/icons-material-design.import";
+@import "components/grid.import";
+@import "components/navbar.import";
+@import "components/typography.import";
+@import "components/transitions.import";
+@import "components/cards.import";
+@import "components/toast.import";
+@import "components/tabs.import";
+@import "components/tooltip.import";
+@import "components/buttons.import";
+@import "components/dropdown.import";
+@import "components/waves.import";
+@import "components/modal.import";
+@import "components/collapsible.import";
+@import "components/chips.import";
+@import "components/materialbox.import";
+@import "components/forms/forms.import";
+@import "components/table_of_contents.import";
+@import "components/sidenav.import";
+@import "components/preloader.import";
+@import "components/slider.import";
+@import "components/carousel.import";
+@import "components/tapTarget.import";
+@import "components/pulse.import";
+@import "components/datepicker.import";
+@import "components/timepicker.import";
