--- a/lib/styl/components/forms/forms.import.styl
+++ b/lib/styl/components/forms/forms.import.styl
@@ -13,10 +13,10 @@ label {
   color: $input-border-color;
 }
 
-@import 'input-fields';
-@import 'radio-buttons';
-@import 'checkboxes';
-@import 'switches';
-@import 'select';
-@import 'file-input';
-@import 'range';
+@import 'input-fields.import';
+@import 'radio-buttons.import';
+@import 'checkboxes.import';
+@import 'switches.import';
+@import 'select.import';
+@import 'file-input.import';
+@import 'range.import';
