--- a/lib/styl/components/grid.import.styl
+++ b/lib/styl/components/grid.import.styl
@@ -3,16 +3,19 @@
   max-width: 1280px;
   width: 90%;
 }
+
 @media $medium-and-up {
   .container {
     width: 85%;
   }
 }
+
 @media $large-and-up {
   .container {
     width: 70%;
   }
 }
+
 .col .row {
   margin-left: (-1 * $gutter-width / 2);
   margin-right: (-1 * $gutter-width / 2);
@@ -33,27 +36,25 @@
   }
 }
 
-
 // Mixins to eliminate code repitition
-@mixin reset-offset {
-  margin-left: auto;
-  left: auto;
-  right: auto;
-}
+reset-offset()
+  margin-left: auto
+  left: auto
+  right: auto
+
 grid-classes($size, $i, $perc) {
-  &.offset-#{$size}#{$i} {
+  &.offset-{$size}{$i} {
     margin-left: $perc;
   }
-  &.pull-#{$size}#{$i} {
+  &.pull-{$size}{$i} {
     right: $perc;
   }
-  &.push-#{$size}#{$i} {
+  &.push-{$size}{$i} {
     left: $perc;
   }
 }
 
-
-.row {
+.row
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
@@ -65,7 +66,7 @@ grid-classes($size, $i, $perc) {
     clear: both;
   }
 
-  .col {
+  .col
     float: left;
     box-sizing: border-box;
     padding: 0 $gutter-width / 2;
@@ -76,81 +77,45 @@ grid-classes($size, $i, $perc) {
       position: relative;
     }
 
-    $i = 1;
-    @while $i <= $num-cols {
-      $perc = unquote((100 / ($num-cols / $i)) + "%");
-      &.s#{$i} {
+    for $i in (1..$num-cols)
+      $perc = percentage(100 / ($num-cols / $i));
+      &.s{$i}
         width: $perc;
         reset-offset();
-      }
-      $i = $i + 1;
-    }
 
-    $i = 1;
-    @while $i <= $num-cols {
-      $perc = unquote((100 / ($num-cols / $i)) + "%");
+    for $i in (1..$num-cols)
+      $perc = percentage(100 / ($num-cols / $i));
       grid-classes("s", $i, $perc);
-      $i = $i + 1;
-    }
 
-    @media $medium-and-up {
-
-      $i = 1;
-      @while $i <= $num-cols {
-        $perc = unquote((100 / ($num-cols / $i)) + "%");
-        &.m#{$i} {
+    @media $medium-and-up
+      for $i in (1..$num-cols)
+        $perc = percentage(100 / ($num-cols / $i));
+        &.m{$i}
           width: $perc;
           reset-offset();
-        }
-        $i = $i + 1
-      }
-
-      $i = 1;
-      @while $i <= $num-cols {
-        $perc = unquote((100 / ($num-cols / $i)) + "%");
+      for $i in (1..$num-cols)
+        $perc = percentage(100 / ($num-cols / $i));
         grid-classes("m", $i, $perc);
-        $i = $i + 1;
-      }
-    }
 
-    @media $large-and-up {
-
-      $i = 1;
-      @while $i <= $num-cols {
-        $perc = unquote((100 / ($num-cols / $i)) + "%");
-        &.l#{$i} {
+    @media $large-and-up
+      for $i in (1..$num-cols)
+        $perc = percentage(100 / ($num-cols / $i));
+        &.l{$i}
           width: $perc;
           reset-offset();
-        }
-        $i = $i + 1;
-      }
 
-      $i = 1;
-      @while $i <= $num-cols {
-        $perc = unquote((100 / ($num-cols / $i)) + "%");
+      for $i in (1..$num-cols)
+        $perc = percentage(100 / ($num-cols / $i));
         grid-classes("l", $i, $perc);
-        $i = $i + 1;
-      }
-    }
 
-    @media $extra-large-and-up {
+    @media $extra-large-and-up
+      for $i in (1..$num-cols)
+        $perc = percentage(100 / ($num-cols / $i));
 
-      $i = 1;
-      @while $i <= $num-cols {
-        $perc = unquote((100 / ($num-cols / $i)) + "%");
-        &.xl#{$i} {
+        &.l{$i}
           width: $perc;
           reset-offset();
-        }
-        $i = $i + 1;
-      }
 
-      $i = 1;
-      @while $i <= $num-cols {
-        $perc = unquote((100 / ($num-cols / $i)) + "%");
-        grid-classes("xl", $i, $perc);
-        $i = $i + 1;
-      }
-    }
-  }
-}
+      for $i in (1..$num-cols)
+        $perc = percentage(100 / ($num-cols / $i));
+        grid-classes("l", $i, $perc);
