--- a/lib/styl/components/typography.import.styl
+++ b/lib/styl/components/typography.import.styl
@@ -45,12 +45,12 @@ small { font-size: 75%; }
 
 
 .flow-text{
-  $i = 0;
-  @while $i <= $intervals {
-    @media only screen and (min-width : 360 + ($i * $interval-size)) {
+
+
+  for $i in (1..$intervals) {
+    @media only screen and (min-width: 360 + ($i * $interval-size)) {
       font-size: 1.2rem * (1 + (.02 * $i));
     }
-    $i = $i + 1;
   }
 
   // Handle below 360px screen
