--- a/lib/styl/components/variables.import.styl
+++ b/lib/styl/components/variables.import.styl
@@ -32,294 +32,295 @@
 // 1. Colors
 // ==========================================================================
 
-$primary-color = getColor("materialize-red", "lighten-2") !default;
-$primary-color-light = lighten($primary-color, 15%) !default;
-$primary-color-dark = darken($primary-color, 15%) !default;
+$primary-color = getColor("materialize-red", "lighten-2");
+p($primary-color)
+$primary-color-light = lighten(#FFFFFF, 15%);
+$primary-color-dark = darken(#FFFFFF, 15%);
 
-$secondary-color = getColor("teal", "lighten-1") !default;
-$success-color = getColor("green", "base") !default;
-$error-color = getColor("red", "base") !default;
-$link-color = getColor("light-blue", "darken-1") !default;
+$secondary-color = getColor("teal", "lighten-1");
+$success-color = getColor("green", "base");
+$error-color = getColor("red", "base");
+$link-color = getColor("light-blue", "darken-1");
 
 // 2. Badges
 // ==========================================================================
 
-$badge-bg-color = $secondary-color !default;
-$badge-height = 22px !default;
+$badge-bg-color = $secondary-color;
+$badge-height = 22px;
 
 // 3. Buttons
 // ==========================================================================
 
 // Shared styles
-$button-border = none !default;
-$button-background-focus = lighten($secondary-color, 4%) !default;
-$button-font-size = 14px !default;
-$button-icon-font-size = 1.3rem !default;
-$button-height = 36px !default;
-$button-padding = 0 16px !default;
-$button-radius = 2px !default;
+$button-border = none;
+$button-background-focus = lighten(#FFFFFF, 4%);
+$button-font-size = 14px;
+$button-icon-font-size = 1.3rem;
+$button-height = 36px;
+$button-padding = 0 16px;
+$button-radius = 2px;
 
 // Disabled styles
-$button-disabled-background = #DFDFDF !default;
-$button-disabled-color = #9F9F9F !default;
+$button-disabled-background = #DFDFDF;
+$button-disabled-color = #9F9F9F;
 
 // Raised buttons
-$button-raised-background = $secondary-color !default;
-$button-raised-background-hover = lighten($button-raised-background, 5%) !default;
-$button-raised-color = #fff !default;
+$button-raised-background = $secondary-color;
+$button-raised-background-hover = lighten(#FFFFFF, 5%);
+$button-raised-color = #fff;
 
 // Large buttons
-$button-large-font-size = 15px !default;
-$button-large-icon-font-size = 1.6rem !default;
-$button-large-height = $button-height * 1.5 !default;
-$button-floating-large-size = 56px !default;
+$button-large-font-size = 15px;
+$button-large-icon-font-size = 1.6rem;
+$button-large-height = $button-height * 1.5;
+$button-floating-large-size = 56px;
 
 // Small buttons
-$button-small-font-size = 13px !default;
-$button-small-icon-font-size = 1.2rem !default;
-$button-small-height = $button-height * .9 !default;
-$button-floating-small-size = $button-height * .9 !default;
+$button-small-font-size = 13px;
+$button-small-icon-font-size = 1.2rem;
+$button-small-height = $button-height * .9;
+$button-floating-small-size = $button-height * .9;
 
 // Flat buttons
-$button-flat-color = #343434 !default;
-$button-flat-disabled-color = lighten(#999, 10%) !default;
+$button-flat-color = #343434;
+$button-flat-disabled-color = lighten(#999, 10%);
 
 // Floating buttons
-$button-floating-background = $secondary-color !default;
-$button-floating-background-hover = $button-floating-background !default;
-$button-floating-color = #fff !default;
-$button-floating-size = 40px !default;
-$button-floating-radius = 50% !default;
+$button-floating-background = $secondary-color;
+$button-floating-background-hover = $button-floating-background;
+$button-floating-color = #fff;
+$button-floating-size = 40px;
+$button-floating-radius = 50%;
 
 // 4. Cards
 // ==========================================================================
 
-$card-padding = 24px !default;
-$card-bg-color = #fff !default;
-$card-link-color = getColor("orange", "accent-2") !default;
-$card-link-color-light = lighten($card-link-color, 20%) !default;
+$card-padding = 24px;
+$card-bg-color = #fff;
+$card-link-color = getColor("orange", "accent-2");
+$card-link-color-light = lighten(#FFFFFF, 20%);
 
 // 5. Carousel
 // ==========================================================================
 
-$carousel-height = 400px !default;
-$carousel-item-height = $carousel-height / 2 !default;
-$carousel-item-width = $carousel-item-height !default;
+$carousel-height = 400px;
+$carousel-item-height = $carousel-height / 2;
+$carousel-item-width = $carousel-item-height;
 
 // 6. Collapsible
 // ==========================================================================
 
-$collapsible-height = 3rem !default;
-$collapsible-line-height = $collapsible-height !default;
-$collapsible-header-color = #fff !default;
-$collapsible-border-color = #ddd !default;
+$collapsible-height = 3rem;
+$collapsible-line-height = $collapsible-height;
+$collapsible-header-color = #fff;
+$collapsible-border-color = #ddd;
 
 // 7. Chips
 // ==========================================================================
 
-$chip-bg-color = #e4e4e4 !default;
-$chip-border-color = #9e9e9e !default;
-$chip-selected-color = #26a69a !default;
-$chip-margin = 5px !default;
+$chip-bg-color = #e4e4e4;
+$chip-border-color = #9e9e9e;
+$chip-selected-color = #26a69a;
+$chip-margin = 5px;
 
 // 8. Date + Time Picker
 // ==========================================================================
 
 $datepicker-display-font-size = 2.8rem;
 $datepicker-calendar-header-color = #999;
-$datepicker-weekday-color = rgba(0, 0, 0, .87) !default;
-$datepicker-weekday-bg = darken($secondary-color, 7%) !default;
-$datepicker-date-bg = $secondary-color !default;
-$datepicker-year = rgba(255, 255, 255, .7) !default;
-$datepicker-focus = rgba(0, 0, 0, .05) !default;
-$datepicker-selected = $secondary-color !default;
-$datepicker-selected-outfocus = desaturate(lighten($secondary-color, 35%), 15%) !default;
-$datepicker-day-focus = transparentize(desaturate($secondary-color, 5%), .75) !default;
-$datepicker-disabled-day-color = rgba(0, 0, 0, .3) !default;
+$datepicker-weekday-color = rgba(0, 0, 0, .87);
+$datepicker-weekday-bg = darken(#FFFFFF, 7%);
+$datepicker-date-bg = $secondary-color;
+$datepicker-year = rgba(255, 255, 255, .7);
+$datepicker-focus = rgba(0, 0, 0, .05);
+$datepicker-selected = $secondary-color;
+$datepicker-selected-outfocus = desaturate(lighten(#FFFFFF, 35%), 15%);
+$datepicker-day-focus = transparentize(desaturate($secondary-color, 5%), .75);
+$datepicker-disabled-day-color = rgba(0, 0, 0, .3);
 
-$timepicker-clock-color = rgba(0, 0, 0, .87) !default;
-$timepicker-clock-plate-bg = #eee !default;
+$timepicker-clock-color = rgba(0, 0, 0, .87);
+$timepicker-clock-plate-bg = #eee;
 
 // 9. Dropdown
 // ==========================================================================
 
-$dropdown-bg-color = #fff !default;
-$dropdown-hover-bg-color = #eee !default;
-$dropdown-color = $secondary-color !default;
-$dropdown-item-height = 50px !default;
+$dropdown-bg-color = #fff;
+$dropdown-hover-bg-color = #eee;
+$dropdown-color = $secondary-color;
+$dropdown-item-height = 50px;
 
 // 10. Forms
 // ==========================================================================
 
 // Text Inputs + Textarea
-$input-height = 3rem !default;
-$input-border-color = getColor("grey", "base") !default;
-$input-border = 1px solid $input-border-color !default;
-$input-background = #fff !default;
-$input-error-color = $error-color !default;
-$input-success-color = $success-color !default;
-$input-focus-color = $secondary-color !default;
-$input-font-size = 16px !default;
+$input-height = 3rem;
+$input-border-color = getColor("grey", "base");
+$input-border = 1px solid $input-border-color;
+$input-background = #fff;
+$input-error-color = $error-color;
+$input-success-color = $success-color;
+$input-focus-color = $secondary-color;
+$input-font-size = 16px;
 $input-margin-bottom = 8px;
-$input-margin = 0 0 $input-margin-bottom 0 !default;
-$input-padding = 0 !default;
-$label-font-size = .8rem !default;
-$input-disabled-color = rgba(0, 0, 0, .42) !default;
-$input-disabled-solid-color = #949494 !default;
-$input-disabled-border = 1px dotted $input-disabled-color !default;
-$input-invalid-border = 1px solid $input-error-color !default;
+$input-margin = 0 0 $input-margin-bottom 0;
+$input-padding = 0;
+$label-font-size = .8rem;
+$input-disabled-color = rgba(0, 0, 0, .42);
+$input-disabled-solid-color = #949494;
+$input-disabled-border = 1px dotted $input-disabled-color;
+$input-invalid-border = 1px solid $input-error-color;
 $input-icon-size = 2rem;
-$placeholder-text-color = lighten($input-border-color, 20%) !default;
+$placeholder-text-color = lighten(#FFFFFF, 20%);
 
 // Radio Buttons
-$radio-fill-color = $secondary-color !default;
-$radio-empty-color = #5a5a5a !default;
-$radio-border = 2px solid $radio-fill-color !default;
+$radio-fill-color = $secondary-color;
+$radio-empty-color = #5a5a5a;
+$radio-border = 2px solid $radio-fill-color;
 
 // Range
-$range-height = 14px !default;
-$range-width = 14px !default;
-$track-height = 3px !default;
+$range-height = 14px;
+$range-width = 14px;
+$track-height = 3px;
 
 // Select
-$select-border = 1px solid #f2f2f2 !default;
-$select-background = rgba(255, 255, 255, 0.90) !default;
-$select-focus = 1px solid lighten($secondary-color, 47%) !default;
-$select-option-hover = rgba(0, 0, 0, .08) !default;
-$select-option-focus = rgba(0, 0, 0, .08) !default;
-$select-option-selected = rgba(0, 0, 0, .03) !default;
-$select-padding = 5px !default;
-$select-radius = 2px !default;
-$select-disabled-color = rgba(0, 0, 0, .3) !default;
+$select-border = 1px solid #f2f2f2;
+$select-background = rgba(255, 255, 255, 0.90);
+$select-focus = 1px solid lighten(#FFFFFF, 47%);
+$select-option-hover = rgba(0, 0, 0, .08);
+$select-option-focus = rgba(0, 0, 0, .08);
+$select-option-selected = rgba(0, 0, 0, .03);
+$select-padding = 5px;
+$select-radius = 2px;
+$select-disabled-color = rgba(0, 0, 0, .3);
 
 // Switches
-$switch-bg-color = $secondary-color !default;
-$switch-checked-lever-bg = desaturate(lighten($switch-bg-color, 25%), 25%) !default;
-$switch-unchecked-bg = #F1F1F1 !default;
-$switch-unchecked-lever-bg = rgba(0, 0, 0, .38) !default;
-$switch-radius = 15px !default;
+$switch-bg-color = $secondary-color;
+$switch-checked-lever-bg = desaturate(lighten(#FFFFFF, 25%), 25%);
+$switch-unchecked-bg = #F1F1F1;
+$switch-unchecked-lever-bg = rgba(0, 0, 0, .38);
+$switch-radius = 15px;
 
 // 11. Global
 // ==========================================================================
 
 // Media Query Ranges
-$small-screen-up = 601px !default;
-$medium-screen-up = 993px !default;
-$large-screen-up = 1201px !default;
-$small-screen = 600px !default;
-$medium-screen = 992px !default;
-$large-screen = 1200px !default;
+$small-screen-up = 601px;
+$medium-screen-up = 993px;
+$large-screen-up = 1201px;
+$small-screen = 600px;
+$medium-screen = 992px;
+$large-screen = 1200px;
 
-$medium-and-up = "only screen and (min-width : $small-screen-up)" !default;
-$large-and-up = "only screen and (min-width : $medium-screen-up)" !default;
-$extra-large-and-up = "only screen and (min-width : $large-screen-up)" !default;
-$small-and-down = "only screen and (max-width : $small-screen)" !default;
-$medium-and-down = "only screen and (max-width : $medium-screen)" !default;
-$medium-only = "only screen and (min-width : $small-screen-up) and (max-width : $medium-screen)" !default;
+$medium-and-up = "only screen and (min-width : $small-screen-up)";
+$large-and-up = "only screen and (min-width : $medium-screen-up)";
+$extra-large-and-up = "only screen and (min-width : $large-screen-up)";
+$small-and-down = "only screen and (max-width : $small-screen)";
+$medium-and-down = "only screen and (max-width : $medium-screen)";
+$medium-only = "only screen and (min-width : $small-screen-up) and (max-width : $medium-screen)";
 
 // 12. Grid
 // ==========================================================================
 
-$num-cols = 12 !default;
-$gutter-width = 1.5rem !default;
-$element-top-margin = $gutter-width/ 3 !default;
-$element-bottom-margin = ($gutter-width* 2) / 3 !default;
+$num-cols = 12;
+$gutter-width = 1.5rem;
+$element-top-margin = $gutter-width/ 3;
+$element-bottom-margin = ($gutter-width* 2) / 3;
 
 // 13. Navigation Bar
 // ==========================================================================
 
-$navbar-height = 64px !default;
-$navbar-line-height = $navbar-height !default;
-$navbar-height-mobile = 56px !default;
-$navbar-line-height-mobile = $navbar-height-mobile !default;
-$navbar-font-size = 1rem !default;
-$navbar-font-color = #fff !default;
-$navbar-brand-font-size = 2.1rem !default;
+$navbar-height = 64px;
+$navbar-line-height = $navbar-height;
+$navbar-height-mobile = 56px;
+$navbar-line-height-mobile = $navbar-height-mobile;
+$navbar-font-size = 1rem;
+$navbar-font-color = #fff;
+$navbar-brand-font-size = 2.1rem;
 
 // 14. Side Navigation
 // ==========================================================================
 
-$sidenav-width = 300px !default;
-$sidenav-font-size = 14px !default;
-$sidenav-font-color = rgba(0, 0, 0, .87) !default;
-$sidenav-bg-color = #fff !default;
-$sidenav-padding = 16px !default;
-$sidenav-item-height = 48px !default;
-$sidenav-line-height = $sidenav-item-height !default;
+$sidenav-width = 300px;
+$sidenav-font-size = 14px;
+$sidenav-font-color = rgba(0, 0, 0, .87);
+$sidenav-bg-color = #fff;
+$sidenav-padding = 16px;
+$sidenav-item-height = 48px;
+$sidenav-line-height = $sidenav-item-height;
 
 // 15. Photo Slider
 // ==========================================================================
 
-$slider-bg-color = getColor('grey', 'base') !default;
-$slider-bg-color-light = getColor('grey', 'lighten-2') !default;
-$slider-indicator-color = getColor('green', 'base') !default;
+$slider-bg-color = getColor('grey', 'base');
+$slider-bg-color-light = getColor('grey', 'lighten-2');
+$slider-indicator-color = getColor('green', 'base');
 
 // 16. Spinners | Loaders
 // ==========================================================================
 
-$spinner-default-color = $secondary-color !default;
+$spinner-default-color = $secondary-color;
 
 // 17. Tabs
 // ==========================================================================
 
-$tabs-underline-color = $primary-color-light !default;
-$tabs-text-color = $primary-color !default;
-$tabs-bg-color = #fff !default;
+$tabs-underline-color = $primary-color-light;
+$tabs-text-color = $primary-color;
+$tabs-bg-color = #fff;
 
 // 18. Tables
 // ==========================================================================
 
-$table-border-color = rgba(0, 0, 0, .12) !default;
-$table-striped-color = rgba(242, 242, 242, 0.5) !default;
+$table-border-color = rgba(0, 0, 0, .12);
+$table-striped-color = rgba(242, 242, 242, 0.5);
 
 // 19. Toasts
 // ==========================================================================
 
-$toast-height = 48px !default;
-$toast-color = #323232 !default;
-$toast-text-color = #fff !default;
+$toast-height = 48px;
+$toast-color = #323232;
+$toast-text-color = #fff;
 $toast-action-color = #eeff41;
 
 // 20. Typography
 // ==========================================================================
 
-$font-stack = -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default;
-$off-black = rgba(0, 0, 0, 0.87) !default;
+$font-stack = -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+$off-black = rgba(0, 0, 0, 0.87);
 // Header Styles
-$h1-fontsize = 4.2rem !default;
-$h2-fontsize = 3.56rem !default;
-$h3-fontsize = 2.92rem !default;
-$h4-fontsize = 2.28rem !default;
-$h5-fontsize = 1.64rem !default;
-$h6-fontsize = 1.15rem !default;
+$h1-fontsize = 4.2rem;
+$h2-fontsize = 3.56rem;
+$h3-fontsize = 2.92rem;
+$h4-fontsize = 2.28rem;
+$h5-fontsize = 1.64rem;
+$h6-fontsize = 1.15rem;
 
 // 21. Footer
 // ==========================================================================
 
-$footer-font-color = #fff !default;
-$footer-bg-color = $primary-color !default;
-$footer-copyright-font-color = rgba(255, 255, 255, .8) !default;
-$footer-copyright-bg-color = rgba(51, 51, 51, .08) !default;
+$footer-font-color = #fff;
+$footer-bg-color = $primary-color;
+$footer-copyright-font-color = rgba(255, 255, 255, .8);
+$footer-copyright-bg-color = rgba(51, 51, 51, .08);
 
 // 22. Flow Text
 // ==========================================================================
 
-$range = $large-screen - $small-screen !default;
-$intervals = 20 !default;
-$interval-size = $range / $intervals !default;
+$range = $large-screen - $small-screen;
+$intervals = 20;
+$interval-size = $range / $intervals;
 
 // 23. Collections
 // ==========================================================================
 
-$collection-border-color = #e0e0e0 !default;
-$collection-bg-color = #fff !default;
-$collection-active-bg-color = $secondary-color !default;
-$collection-active-color = lighten($secondary-color, 55%) !default;
-$collection-hover-bg-color = #ddd !default;
-$collection-link-color = $secondary-color !default;
-$collection-line-height = 1.5rem !default;
+$collection-border-color = #e0e0e0;
+$collection-bg-color = #fff;
+$collection-active-bg-color = $secondary-color;
+$collection-active-color = lighten(#FFFFFF, 55%);
+$collection-hover-bg-color = #ddd;
+$collection-link-color = $secondary-color;
+$collection-line-height = 1.5rem;
 
 // 24. Progress Bar
 // ==========================================================================
 
-$progress-bar-color = $secondary-color !default;
+$progress-bar-color = $secondary-color;
