--- a/lib/styl/components/waves.import.styl
+++ b/lib/styl/components/waves.import.styl
@@ -1,4 +1,3 @@
-
 /*!
  * Waves v0.6.0
  * http://fian.my.id/Waves
@@ -7,7 +6,6 @@
  * Released under the MIT license
  * https://github.com/fians/Waves/blob/master/LICENSE
  */
-
 
 .waves-effect {
   position: relative;
@@ -25,11 +23,11 @@
     border-radius: 50%;
     width: 20px;
     height: 20px;
-    margin-top:-10px;
-    margin-left:-10px;
+    margin-top: -10px;
+    margin-left: -10px;
     opacity: 0;
 
-    background: rgba(0,0,0,0.2);
+    background: rgba(0, 0, 0, 0.2);
     transition: all 0.7s ease-out;
     transition-property: transform, opacity;
     transform: scale(0);
@@ -75,7 +73,7 @@
 }
 
 .waves-notransition {
-  transition: none #{"!important"};
+  transition: none !important;
 }
 
 .waves-circle {
