allow for variable usage

--- a/lib/styl/materialize.styl
+++ b/lib/styl/materialize.styl
@@ -1,11 +1,4 @@
-// Color
-@import "components/color-variables.import";
-@import "components/color-classes.import";
-
-// Variables;
-@import "components/variables.import";
-
-// Reset
+//// Reset
 @import "components/normalize.import";
 
 // components
