fix grid calculations

--- a/lib/styl/components/forms/input-fields.import.styl
+++ b/lib/styl/components/forms/input-fields.import.styl
@@ -163,7 +163,7 @@ textarea.materialize-textarea {
   // Gutter spacing
   &.col {
     label {
-      left: $gutter-width / 2;
+      left: ($gutter-width / 2);
     }
 
     .prefix ~ label,
