--- a/lib/styl/components/variables.import.styl
+++ b/lib/styl/components/variables.import.styl
@@ -222,8 +222,8 @@ $medium-only = "only screen and (min-width : $small-screen-up) and (max-width : 
 
 $num-cols = 12;
 $gutter-width = 1.5rem;
-$element-top-margin = $gutter-width/ 3;
-$element-bottom-margin = ($gutter-width* 2) / 3;
+$element-top-margin = ($gutter-width/ 3);
+$element-bottom-margin = (($gutter-width * 2) / 3);
 
 // 13. Navigation Bar
 // ==========================================================================
