--- a/lib/styl/components/grid.import.styl
+++ b/lib/styl/components/grid.import.styl
@@ -17,8 +17,8 @@
 }
 
 .col .row {
-  margin-left: (-1 * $gutter-width / 2);
-  margin-right: (-1 * $gutter-width / 2);
+  margin-left: (-1 * ($gutter-width / 2));
+  margin-right: (-1 * ($gutter-width / 2));
 }
 
 .section {
@@ -69,7 +69,7 @@ grid-classes($size, $i, $perc) {
   .col
     float: left;
     box-sizing: border-box;
-    padding: 0 $gutter-width / 2;
+    padding: 0 ($gutter-width / 2);
     min-height: 1px;
 
     &[class*="push-"],
